--- a/_includes/bio.html
+++ b/_includes/bio.html
@@ -5,6 +5,6 @@
 
 <p> I've worked with customers and the general public in many ways, from selling clothing, installing appliances, to producing video content and designing web sites for clients. I've had to manage customers expectations, communicate with them in a clear and concise way and provide an overall great experience over the phone, via e-mail and face to face. Having happy, satisified customers is the key to success.</p>
 
-<p> Currently I support a Top 10 Productivity app in the App Store. I'm an intimate part of a small team delivering top notch email and chat support. I also take alot of time to practice the photography skills I've learned in school and out. Living in Denver provides great opportunities to take some stunning photos of landscape, people, animals and cityscape.</p>
+<p> Currently I support a SaaS company with a Top 10 Productivity app in the App Store. I'm an intimate part of a small team delivering top notch email and chat support. I also take time to hone my photography skills. Living in Denver provides great opportunities to take some stunning photos of landscape, people, animals and cityscape.</p>
 
 <h4>You can  <a href="https://pgp.mit.edu/pks/lookup?op=get&search=0xA2258D8CFE0DC15B" alt="MIT PGP LOOK UP">crytographically verify</a> <a href="/key.asc" alt="My Key.asc">my identity</a> <a href="http://keybase.io/kevingailey" alt="Kevin Gailey on Keybase">on line</a> and <a href="mailto:photog@kevingailey.com">hire me</a> </h4>	
