--- a/_includes/bio.html
+++ b/_includes/bio.html
@@ -1,10 +1,6 @@
 <img src="/img/fed.jpg" />
 <h2><center>Kevin Gailey</center></h2>
-<p> Hello and good day(: My name is Kevin but my friends call me KG.</p>
-<p>A brief background of myself: I attended film school in NYC. Taught myself web design and system adminstration. Am a avid reader and explorer. A digital native, growing up in a time of massive change. </p>
-
-<p> I've worked with customers and the general public in many ways, from selling clothing, installing appliances, to producing video content and designing web sites for clients. I've had to manage customers expectations, communicate with them in a clear and concise way and provide an overall great experience over the phone, via e-mail and face to face. Having happy, satisified customers is the key to success.</p>
-
-<p> Currently I support a SaaS company with a Top 10 Productivity app in the App Store. I'm an intimate part of a small team delivering top notch email and chat support. I also take time to hone my photography skills. Living in Denver provides great opportunities to take some stunning photos of landscape, people, animals and cityscape.</p>
-
+<p>My name is Kevin but my team calls me KG.</p>
+<p>Currently I support a SaaS company with multiple VPN apps in the App Store. I arranged a team delivering top notch email and chat support. With my guidance the team has delivered industry high customer satisfaction of 98% and response times under 30 minutes.</p>
+<p>I have leveraged my leadership and management skills to drive world quality support for our brands, all while having a good time and driving team morale. I enjoy supervising top brands and delivering unrivaled results in customer satisfaction, service levels and quality to customers around the globe.</p>
 <h4>You can  <a href="https://pgp.mit.edu/pks/lookup?op=get&search=0xA2258D8CFE0DC15B" alt="MIT PGP LOOK UP">crytographically verify</a> <a href="/key.asc" alt="My Key.asc">my identity</a> <a href="http://keybase.io/kevingailey" alt="Kevin Gailey on Keybase">on line</a> and <a href="mailto:photog@kevingailey.com">hire me</a> </h4>	
