<br /><br /><br /><br /><br /><br />

--- a/_includes/bio.html
+++ b/_includes/bio.html
@@ -1,3 +1,5 @@
+<br /><br /><br /><br /><br /><br />
+<h1>Photography by.KG</h1>
 <br /><br /><br />
 <img src="/img/fed.jpg" />
 <h2><center>Kevin Gailey</center></h2>
