--- a/_includes/bio.html
+++ b/_includes/bio.html
@@ -1,6 +1,6 @@
 <br /><br /><br /><br /><br /><br />
-<h1>Photography by.KG</h1>
-<br /><br /><br />
+<h1>Photography<br /> by.KG</h1>
+<br />
 <img src="/img/fed.jpg" />
 <h2><center>Kevin Gailey</center></h2>
 <p>My name is Kevin but my team calls me KG.</p>
